# drone_arm_simulation

./: LICENSE  README.md
robotic_arm/: CMakeLists.txt  package.xml  setup.cfg  setup.py
robotic_arm/config/: joint_names_Robotic arm.yaml
robotic_arm/launch/: rviz.launch  sim_launch.launch.py  spawn_urdf.launch
robotic_arm/meshes/: base_link.STL  l1.STL  l2.STL  l3.STL  l4.STL  l5.STL  l6.STL  l7.STL
robotic_arm/robotic_arm/: joint_state_publisher.py  joint_state_publisher_gui.py
robotic_arm/urdf/: drone_arm.urdf
